大幅調整界面及匯入方式

--- a/README
+++ b/README
@@ -24,8 +24,16 @@
 
 【更新資訊】
 =================================================
-《tad_evaluation 1.1 版 尚未釋出》
- 1.修正前台管理者工具連結不正確的問題
+《tad_evaluation 1.1 版 2013-10-26 釋出》
+
+ 1.修正掃描匯入會將檔案清空的bug。
+ 2.修正首頁新增按鈕無效的問題。
+ 3.新增「頁籤模式」及「不匯入檔案」的設定，並會自動過濾暫存檔
+ 4.加強中文檔名排序（Windows下幾乎可以完全無誤，Linux下還是要自己手調一下）
+ 5.檔案呈現方式加入目錄縮放功能，方便調整位置。
+ 6.將後台編輯評鑑及匯入檔案整合成一個頁面，減少困擾。
+ 7.修改評鑑標題時會自動修改FTP目錄名稱。
+
 
  =================================================
  《tad_evaluation 1.0 版 2013-10-24 釋出》
