修復第一層目錄下檔案在頁籤模式時無法讀出的bug

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -24,6 +24,12 @@
 
 【更新資訊】
 =================================================
+《tad_evaluation 1.2 版 2013-11-04 釋出》
+ 1.修復第一層目錄下檔案在頁籤模式時無法讀出的bug。
+ 2.修正部份詞彙用語。
+
+
+=================================================
 《tad_evaluation 1.1 版 2013-10-26 釋出》
 
  1.修正掃描匯入會將檔案清空的bug。
