修正圖片或影片檔案無法顯示的問題。

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -24,6 +24,11 @@
 
 【更新資訊】
 =================================================
+《tad_evaluation 1.21 版 2013-11-05 釋出》
+ 1.修正圖片或影片檔案無法顯示的問題。
+
+
+=================================================
 《tad_evaluation 1.2 版 2013-11-04 釋出》
  1.修復第一層目錄下檔案在頁籤模式時無法讀出的bug。
  2.修正部份詞彙用語。
