取消頁籤模式，一律改為樹狀表格呈現方式

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -23,20 +23,28 @@
 5.若有更新檔案，只要重複 2~3 動作即可。
 
 【更新資訊】
+《tad_evaluation 1.4 版 2014-01-25 釋出》
 =================================================
-《tad_evaluation 1.21 版 2013-11-05 釋出》
- 1.修正圖片或影片檔案無法顯示的問題。
+ 1.修正在windows下，若遇到許功蓋等衝碼字會無法匯入的問題。
+ 2.取消頁籤模式，一律改為樹狀表格呈現方式
+ 3.調整匯入方式，檔案或目錄較多也可順利匯入。
 
 
+《tad_evaluation 1.3 版 2014-01-25 釋出》
 =================================================
-《tad_evaluation 1.2 版 2013-11-04 釋出》
+ 1.修正檔案會重複出現的問題。
+ 2.精簡語系
+ 3.修正開除錯時產生的通知訊息
+
+
+《tad_evaluation 1.2 版 2014-01-21 釋出》
+=================================================
  1.修復第一層目錄下檔案在頁籤模式時無法讀出的bug。
  2.修正部份詞彙用語。
 
 
-=================================================
 《tad_evaluation 1.1 版 2013-10-26 釋出》
-
+=================================================
  1.修正掃描匯入會將檔案清空的bug。
  2.修正首頁新增按鈕無效的問題。
  3.新增「頁籤模式」及「不匯入檔案」的設定，並會自動過濾暫存檔
@@ -46,8 +54,8 @@
  7.修改評鑑標題時會自動修改FTP目錄名稱。
 
 
- =================================================
  《tad_evaluation 1.0 版 2013-10-24 釋出》
+ =================================================
   1.支援整批中文目錄檔名掃描匯入。
   2.支援搜尋功能
   3.可直接線上觀看大部分檔案
