修正影片播放大小不正確的問題。修正若沒有目錄只有檔案時，無法讀出檔案的bug。

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -23,6 +23,13 @@
 5.若有更新檔案，只要重複 2~3 動作即可。
 
 【更新資訊】
+
+《tad_evaluation 1.5 版 2014-02-14 釋出》
+=================================================
+ 1.修正影片播放大小不正確的問題。
+ 2.修正若沒有目錄只有檔案時，無法讀出檔案的bug。
+
+
 《tad_evaluation 1.4 版 2014-01-25 釋出》
 =================================================
  1.修正在windows下，若遇到許功蓋等衝碼字會無法匯入的問題。
