--- a/README
+++ b/README
@@ -24,6 +24,11 @@
 
 【更新資訊】
 
+《tad_evaluation 1.6 版 2014-03-05 釋出》
+=================================================
+ 1.可設定不經由google doc，直接下載開啟檔案
+ 2.可以設定各階層的外觀（從偏好設定）
+
 《tad_evaluation 1.5 版 2014-02-14 釋出》
 =================================================
  1.修正影片播放大小不正確的問題。
