可大批匯入（早期僅能匯入約1000個檔案或目錄）

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -23,10 +23,15 @@
 5.若有更新檔案，只要重複 2~3 動作即可。
 
 【更新資訊】
+《tad_evaluation 1.7 版 2014-03-20 釋出》
+=================================================
+ 1.可大批匯入（早期僅能匯入約1000個檔案或目錄）
+ 2.加入目錄、檔案及垃圾檔的計數功能
+ 3.在不使用Google doc 時會以新視窗下載開啟檔案
 
 《tad_evaluation 1.6 版 2014-03-05 釋出》
 =================================================
- 1.可設定不經由google doc，直接下載開啟檔案
+ 1.可設定不經由 Google doc，直接下載開啟檔案
  2.可以設定各階層的外觀（從偏好設定）
 
 《tad_evaluation 1.5 版 2014-02-14 釋出》
