--- a/README
+++ b/README
@@ -1,28 +1,8 @@
-【關於Tad Evaluation】
+《tad_evaluation 1.71 版 2014-09-25 釋出》
 =================================================
-有鑑學校教師為了應付上級的各種評鑑，疲於奔命，檔案蒐集完了還要做成網站，偏偏又沒有什快速容易的工具可以把這煩人的事情給解決掉。因此，在某個不勝唏噓為網管人員掬一把同情之淚的午後，花了點時間，完成了這個模組，希望可以減少網管人員製作評鑑網站的壓力與時間。
+1.修改程式，使之符合無障礙網頁規範
+2.修正在MySQL嚴格模式下無法新增事件的問題
 
-
-【環境需求】
-=================================================
-1.PHP 5 以上
-2.需要 Tad Tools 工具包 2.01 版
-
-【安裝方法】
-=================================================
-1.將新模組解壓，把 tad_evaluation 目錄上傳到 modules 下。
-2.需搭配 Tad Tools 工具包2.01 以上，詳細安裝方法請按此連結。
-3.進入後台「模組→系統」進行模組安裝。
-
-【使用方法】
-=================================================
-1.先到後台建立一個評鑑，此時系統會替您建立一個上傳資料夾。
-2.將所有蒐集到的檔案及目錄上傳道指定資料夾，並按下「重新掃描檔案」，至此，檔案資訊已匯入資料庫中。
-3.您可以拉動檔案或目錄來排序（拉動目錄後請重新整理畫面，目錄下檔案就會重新排列）
-4.完成。
-5.若有更新檔案，只要重複 2~3 動作即可。
-
-【更新資訊】
 《tad_evaluation 1.7 版 2014-03-20 釋出》
 =================================================
  1.可大批匯入（早期僅能匯入約1000個檔案或目錄）
