修改PHP程式碼以符合PSR2規範

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+《tad_evaluation 1.8 版 尚未釋出》
+=================================================
+ 1.感謝 Michael Beck 提供英文語系
+ 2.修改PHP程式碼以符合PSR2規範
+
 《tad_evaluation 1.71 版 2014-09-25 釋出》
 =================================================
 1.修改程式，使之符合無障礙網頁規範
