加入 Bootstrap3 支援

--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-《tad_evaluation 1.8 版 尚未釋出》
+《tad_evaluation 1.8 版 2015-07-11 釋出》
 =================================================
  1.感謝 Michael Beck 提供英文語系
  2.修改PHP程式碼以符合PSR2規範
+ 3.加入 Bootstrap3 支援
 
 《tad_evaluation 1.71 版 2014-09-25 釋出》
 =================================================
