--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,7 @@
+"Tad_evaluation 1.8.1 Version 2015-07-12 release"
+=================================================
+ 1.Modify the program so that it conforms with WCAG
+
 "Tad_evaluation 1.8 Version 2015-07-11 release"
 =================================================
  1.Thank Michael Beck in English language
