--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -1,3 +1,11 @@
+《tad_evaluation 1.9 版 2016-05-22 釋出》
+=================================================
+ 1.使影片播放可以以正常大小播放
+ 2.修正燈箱關閉時會自動重新載入畫面的問題
+ 3.支援 PHP7
+ 4.移除 BootStrap2
+
+
 《tad_evaluation 1.8.1 版 2015-07-12 釋出》
 =================================================
  1.修改程式，使之符合無障礙網頁規範
