--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,56 +1,64 @@
-"Tad_evaluation 1.8.1 Version 2015-07-12 release"
+Tad_evaluation 1.9 (2016-05-22 release)
+=================================================
+ 1.Let the video player can play normal sizeF
+ 2.Fixed the problem with fancybox
+ 3.Support PHP7
+ 4.Remove BootStrap2
+
+
+Tad_evaluation 1.8.1 (2015-07-12 release)
 =================================================
  1.Modify the program so that it conforms with WCAG
 
-"Tad_evaluation 1.8 Version 2015-07-11 release"
+Tad_evaluation 1.8 (2015-07-11 release)
 =================================================
  1.Thank Michael Beck in English language
  2.Modify PHP code to conform to specifications PSR2
  3.Add Bootstrap3 templates
 
-"Tad_evaluation 1.71 Version 2014-09-25 release"
+Tad_evaluation 1.71 (2014-09-25 release)
 =================================================
 1. Modify the program so that it conforms with WCAG
 2. Fixed in MySQL strict mode can not issue new event
 
-"Tad_evaluation Version 1.7 released 2014-03-20"
+Tad_evaluation 1.7 (2014-03-20 release)
 =================================================
  1. You can import a large number of (early only to import about 1000 file or directory)
  2. Add the counting function directory, files and junk stalls
  3. When not in use Google doc will open in a new window download file
 
-"Tad_evaluation Version 1.6 released 2014-03-05"
+Tad_evaluation 1.6 (2014-03-05 release)
 =================================================
  1. You can not set via Google doc, open the file direct download
  2. You can set the appearance of all walks of life (from preferences)
 
-"Tad_evaluation 1.5 version released 2014-02-14"
+Tad_evaluation 1.5 (2014-02-14 release)
 =================================================
  1. Fixed incorrect size video playback problems.
  2. Fixed only if no catalog files, files can not be read bug.
 
 
-"Tad_evaluation 1.4 version released 2014-01-25"
+Tad_evaluation 1.4 (2014-01-25 release)
 =================================================
  1. Fixed in the windows, cover, etc. If you encounter promises power rushing yards words will not import problems.
  2. Cancel tab mode, shall be replaced by the presentation of the tree form
  3. Adjust the import mode, files or directories can be more successfully imported.
 
 
-"Tad_evaluation 1.3 version released 2014-01-25"
+Tad_evaluation 1.3 (2014-01-25 release)
 =================================================
  Problem 1. Fixed file will repeated.
  2. streamline Languages
  3. Fixed error generated when the expulsion of the notification message
 
 
-"Tad_evaluation 1.2 version released 2014-01-21"
+Tad_evaluation 1.2 (2014-01-21 release)
 =================================================
  1. Fix first layer directory files can not be read out when tab mode bug.
  2. Fixed part of the vocabulary terms.
 
 
-"Tad_evaluation version 1.1 release 2013-10-26"
+Tad_evaluation 1.1 (2013-10-26 release)
 =================================================
  1. Fix will scan file import emptied bug.
  2. Fixed Home Add button issue invalid.
@@ -61,7 +69,7 @@
  FTP directory name automatically modifies evaluation 7. Modify title.
 
 
- "Tad_evaluation version 1.0 release 2013-10-24"
+ Tad_evaluation 1.0 (2013-10-24 release)
  =================================================
   1. Supporting the entire batch of Chinese import directory file name scanning.
   2. Support Search function
