--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -1,3 +1,10 @@
+Tad Evaluation 2.0 (2017-04-20 釋出)
+=================================================
+1.修正沒有目錄時會導致jquery的執行錯誤。
+2.沒有目錄時，隱藏展開及閤起按鈕
+3.加入 Office 文件格式線上檢視工具
+
+
 Tad Evaluation 1.9.1 (2017-01-08 釋出)
 =================================================
 1.將RWD調整成1024下才運作
