加入是否使用Office檢視器的設定

--- a/language/tchinese/changelog.txt
+++ b/language/tchinese/changelog.txt
@@ -1,3 +1,11 @@
+Tad Evaluation 2.1 (2018-03-21 釋出)
+=================================================
+1.支援 PHP 7.1
+2.本地端文件不使用Office檢視器
+3.加入是否使用Office檢視器的設定
+
+
+
 Tad Evaluation 2.0 (2017-04-20 釋出)
 =================================================
 1.修正沒有目錄時會導致jquery的執行錯誤。
