--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,10 @@
+Tad Evaluation 2.1 (released on 2018-03-21)
+=================================================
+1. Support PHP 7.1
+2. The local side file does not use Office Viewer
+3. Add use Office Viewer settings
+
+
 Tad Evaluation 2.0 (2017-04-20 released)
 =================================================
 1. Fixed no directory will cause jquery implementation error.
