修改偏好設定的編碼可能誤判的問題

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Tad Evaluation 2.2 (尚未釋出)
+=================================================
+1.修改偏好設定的編碼可能誤判的問題
+
+
+
 Tad Evaluation 2.1 (2018-03-21 釋出)
 =================================================
 1.支援 PHP 7.1
