--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,3 +1,16 @@
+Tad Evaluation 2.2.1 (2019-01-01 釋出)
+=================================================
+1.支援 BootStrap4
+
+
+Tad Evaluation 2.2 (2018-05-21 釋出)
+=================================================
+1.修改偏好設定的編碼可能誤判的問題
+2.支援PHP 7.2
+3.支援資料庫嚴格模式
+4.移除 tchinese Big5 語系
+
+
 Tad Evaluation 2.1 (2018-03-21 釋出)
 =================================================
 1.支援 PHP 7.1
