--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,15 @@
+Tad Evaluation 2.2.1 (released on 2019-01-01)
+=================================================
+1.Support BootStrap4
+
+Tad Evaluation 2.2 (released on 2018-05-21)
+=================================================
+1. Modify the problem that the encoding of the preference setting may be misjudged
+2. Supports PHP 7.2
+3. Support database strict mode
+4. Remove the tchinese Big5 language
+
+
 Tad Evaluation 2.1 (released on 2018-03-21)
 =================================================
 1. Support PHP 7.1
