--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Tad Evaluation 2.2.1 (2019-01-01 釋出)
 =================================================
 1.支援 BootStrap4
+2.支援 PHP 7.3
 
 Tad Evaluation 2.2 (2018-05-21 釋出)
 =================================================
