--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,6 +1,7 @@
 Tad Evaluation 2.2.1 (released on 2019-01-01)
 =================================================
 1.Support BootStrap4
+2.Support PHP 7.3
 
 Tad Evaluation 2.2 (released on 2018-05-21)
 =================================================
