--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,8 @@
+Tad Evaluation 2.2.2 (released from 2019-05-10)
+========================================================
+1. Support XOOPS 2.5.10
+2. No longer supports PHP 5.3
+
 Tad Evaluation 2.2.1 (released on 2019-01-01)
 =================================================
 1.Support BootStrap4
