針對無障礙 2.0 AA標準進行修正

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Tad Evaluation 2.2.3 (尚未釋出)
+===============================================
+1.針對無障礙 2.0 AA標準進行修正
+
 Tad Evaluation 2.2.2 (2019-05-10 釋出)
 ===============================================
 1.支援 XOOPS 2.5.10
