--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,3 +1,11 @@
+Tad Evaluation 2.3 (2021-07-31 釋出)
+===============================================
+1.符合 2021/07 新版無障礙 AA 標準
+2.合併 BootStrap3、4樣板
+3.支援 XOOPS 2.5.11
+4.移除Google及微軟的線上閱讀器設定
+
+
 Tad Evaluation 2.2.3 (2020-03-14 釋出)
 ===============================================
 1.針對無障礙 2.0 AA標準進行修正
