--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Tad Evaluation 2.4 (尚未釋出)
+===============================================
+1.加入無障礙 2.1 AA 自動修正功能
+
 Tad Evaluation 2.3 (2021-07-31 釋出)
 ===============================================
 1.符合 2021/07 新版無障礙 AA 標準
