修改說明檔

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Tad Evaluation 2.4 (尚未釋出)
+Tad Evaluation 2.4 (2021-08-22 釋出)
 ===============================================
 1.加入無障礙 2.1 AA 自動修正功能
 
