--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+Tad Evaluation 2.6 (2021-12-13 釋出)
+====================================
+1.支援 BootStrap5
+
+Tad Evaluation 2.5 (2021-08-24 釋出)
+====================================
+1.搜尋功能的安全性修正
+
 Tad Evaluation 2.4 (2021-08-22 釋出)
 ===============================================
 1.加入無障礙 2.1 AA 自動修正功能
