將影片播放器改為 VideoJs

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Tad Evaluation 2.7 (2022-06-21 釋出)
+====================================
+1.將影片播放器改為 VideoJs
+
 Tad Evaluation 2.6 (2021-12-13 釋出)
 ====================================
 1.支援 BootStrap5
