--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+Tad Evaluation 3.0 (尚未釋出)
+====================================
+1.支援XOOPS 2.5.11
+2.支援PHP8.3
+3.用$xoopsDB->escape()取代$myts->addSlashes()
+
 Tad Evaluation 2.7 (2022-06-21 釋出)
 ====================================
 1.將影片播放器改為 VideoJs
