--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,3 +1,10 @@
+Tad Evaluation 3.0 (2024-11-11 釋出)
+====================================
+1.支援XOOPS 2.5.11
+2.支援PHP8.1.x
+3.用$xoopsDB->escape()取代$myts->addSlashes()
+4.資料庫語法參數化
+
 Tad Evaluation 2.7 (2022-06-21 釋出)
 ====================================
 1.將影片播放器改為 VideoJs
