--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,10 @@
+Tad Evaluation 3.0 (released on 2024-11-11)
+====================================
+1. Support XOOPS 2.5.11
+2. Support PHP8.1.x
+3. Use $xoopsDB->escape() instead of $myts->addSlashes()
+4. Database syntax parameterization
+
 Tad Evaluation 2.7 (released on 2022-06-21)
 ====================================
 1. Change the video player to VideoJs
